[package]
name = "ffxi-viewer-core"
version.workspace = true
edition.workspace = true
license.workspace = true

# Bevy ECS plugins, world model, camera, and HUD shared by both the native
# windowed viewer (ffxi-client/src/view_native/) and the browser viewer
# (ffxi-viewer-wasm/). No tokio, no I/O — state arrives through the
# `SceneSource` trait, implemented separately by each front-end.
#
# Stage-3 wasm build will need to override `bevy` to use webgl2 features
# and drop platform backends that are linux-only — this Cargo.toml uses
# the workspace bevy (full default features) for the native build.

[dependencies]
# `serialize` enables serde derives on `KeyCode`, `Modifiers` modifiers, and
# the rest of `bevy_input` — needed by `keybinds::KeyBind` so the on-disk
# `keybinds.json` can name keys (`"KeyW"`, `"Numpad8"`, etc.) without a
# hand-rolled match table covering every variant.
bevy = { workspace = true, features = ["serialize"] }
ffxi-viewer-wire = { path = "../ffxi-viewer-wire" }
ffxi-dat = { path = "../ffxi-dat" }
serde = { workspace = true }
# Glyph rasterizer for the 3D nameplate billboards. Bevy's text path is
# locked to the 2D pipeline (UI / Text2d), which doesn't depth-test
# against 3D meshes — so for true world-space occluded labels we
# rasterize text → Image ourselves and stamp it onto a 3D quad. ab_glyph
# is already a transitive dep (bevy_text pulls it in); declaring it
# directly keeps that path stable across future Bevy version bumps.
ab_glyph = "0.2"

# Native-only: ADPCM/PCM decoders for `.bgw` / `.spw`. The audio plugin
# (see `audio.rs`) reads BGM tracks from the local install in response
# to LSB's 0x05F music-change packets. wasm has no local install to
# read from; a browser viewer would have to receive pre-decoded PCM
# over the websocket if/when that's wanted.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ffxi-audio = { path = "../ffxi-audio" }
# We bypass rodio's format detection entirely (see audio.rs ::
# `RawPcmSource`) because Bevy 0.17 builds rodio without any
# decoder features. So no hound dep needed — we feed rodio
# pre-decoded f32 samples directly.

# wasm32 has no syscall for wall-clock time; std::time::SystemTime::now()
# panics there. The HUD's reconnect-age line needs millis-since-epoch, so
# we delegate to JS's `Date.now()` on wasm targets only.
[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"

[dev-dependencies]
# JSON round-trip test for `GraphicsSettings`. Not in the runtime deps:
# the resource itself only needs `serde` derives; serialization is the
# `ffxi-client::graphics_store` layer's concern.
serde_json = { workspace = true }
