[package]
name = "ffxi-viewer-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true

# Browser front-end for the operator viewer. Renders the same Bevy scene
# and HUD as the native windowed viewer (`ffxi-client/src/view_native/`),
# but consumes wire frames from a WebSocket relay (Stage 2) instead of
# the in-process tokio bridge.
#
# Strict consumer: cannot depend on `ffxi-client` (tokio + rustls + raw
# sockets are native-only). State arrives as `ffxi_viewer_wire::Frame`
# values, which the `WasmSource` decodes off a `gloo_net` WebSocket and
# forwards to the core ECS via flume channels.
#
# Bevy here matches the workspace pin, but with `default-features = false`
# and only the renderer/UI features needed in the browser. `webgl2` is
# load-bearing — `webgpu` is still gated by browser flags as of early 2026.

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Pinned directly (matches `workspace.dependencies.bevy`) rather than
# `workspace = true` because Cargo ignores `default-features = false`
# on a workspace inherit when the workspace entry itself doesn't disable
# defaults — the workspace pin keeps full defaults for the native side.
# 0.19 stopped cross-implying the ui/window/render features, so each is
# listed explicitly; `bevy_ui_render` split out of `bevy_ui`.
bevy = { version = "0.19", default-features = false, features = [
    "bevy_winit",
    "bevy_window",
    "bevy_render",
    "bevy_pbr",
    "bevy_ui",
    "bevy_ui_render",
    "bevy_text",
    "webgl2",
] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
gloo-net = { version = "0.7", features = ["websocket"] }
gloo-utils = "0.2"
postcard = { version = "1", features = ["use-std"] }
flume = { version = "0.12", default-features = false }
futures-util = { version = "0.3", default-features = false, features = ["std", "sink"] }
log = "0.4"
console_log = { version = "1", features = ["color"] }
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["Location", "UrlSearchParams", "Window"] }

ffxi-viewer-wire = { path = "../ffxi-viewer-wire" }
ffxi-viewer-core = { path = "../ffxi-viewer-core" }

# The browser bundle is built by trunk in the release-wasm custom job, not by
# dist's cargo-build path — exclude it from dist's binary discovery.
[package.metadata.dist]
dist = false
