[package]
name = "xtask"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

# Intentionally dependency-free (std only). xtask is project automation that
# may run *before* the build-time vendor data is present, so it must not depend
# on workspace crates whose build scripts read vendor/ (e.g. ffxi-dat).
[dependencies]

# Project automation, never a shipped artifact — keep dist's release packaging
# focused on ffxi-client.
[package.metadata.dist]
dist = false
