[package]
name = "ffxi-client"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "TUI/agent-driven client for LSB/Phoenix FFXI private servers."

[lib]
path = "src/lib.rs"

[[bin]]
name = "ffxi-client"
path = "src/main.rs"

[features]
default = []
# Enable the Bevy-driven 3D terminal dashboard (`tui` subcommand).
# Without this feature, only the `play` subcommand (JSON-line agent mode)
# is compiled — significantly faster compile times.
tui = ["dep:crossterm", "dep:bevy", "dep:bevy_ratatui", "dep:bevy_ratatui_camera"]

[dependencies]
ffxi-proto = { path = "../ffxi-proto" }

anyhow.workspace = true
bytes.workspace = true
clap.workspace = true
crossterm = { workspace = true, optional = true }
flate2.workspace = true
ratatui.workspace = true
rustls.workspace = true
rustls-pki-types.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

bevy = { workspace = true, optional = true }
bevy_ratatui = { workspace = true, optional = true }
bevy_ratatui_camera = { workspace = true, optional = true }

[dev-dependencies]
mysql_async.workspace = true
