[package]
name = "ffxi-client"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "TUI/agent-driven client for LSB/Phoenix FFXI private servers."

[lib]
path = "src/lib.rs"

[[bin]]
name = "ffxi-client"
path = "src/main.rs"

[features]
default = []
# Enable the Bevy-driven 3D terminal dashboard (`tui` subcommand).
# Without this feature, only the `play` subcommand (JSON-line agent mode)
# is compiled — significantly faster compile times.
tui = ["dep:crossterm", "dep:bevy", "dep:bevy_ratatui", "dep:bevy_ratatui_camera"]
# Enable the native windowed viewer (`native` subcommand). Distinct from
# `tui`: opens a real OS window via bevy_winit; consumes the same in-process
# state stream. Bevy's winit event loop must run on the OS main thread on
# macOS, so main.rs handles the dispatch specially when this feature
# is active.
native-window = ["dep:bevy", "dep:ffxi-viewer-core", "dep:ffxi-viewer-wire"]

[dependencies]
ffxi-proto = { path = "../ffxi-proto" }
ffxi-nav = { path = "../ffxi-nav" }

anyhow.workspace = true
bytes.workspace = true
clap.workspace = true
crossterm = { workspace = true, optional = true }
flate2.workspace = true
ratatui.workspace = true
rustls.workspace = true
rustls-pki-types.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

bevy = { workspace = true, optional = true }
bevy_ratatui = { workspace = true, optional = true }
bevy_ratatui_camera = { workspace = true, optional = true }

ffxi-viewer-wire = { path = "../ffxi-viewer-wire", optional = true }
ffxi-viewer-core = { path = "../ffxi-viewer-core", optional = true }

[dev-dependencies]
mysql_async.workspace = true
